Look for changes in package descriptor for PackageDiffImpl

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.1.6",
     "hot-shots": "^8.2.1",
     "ignore": "^5.1.6",
+    "lodash": "^4.17.20",
     "rimraf": "^3.0.2",
     "semver": "^7.3.2",
     "shelljs": "^0.8.4",
